--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Voicemail</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="inbox">Inbox</string>
+    <string name="compose">Compose</string>
 </resources>
