--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="inbox">Inbox</string>
-    <string name="compose">Compose</string>
+    <string name="compose">Compose Email</string>
 </resources>
